--- a/index.css
+++ b/index.css
@@ -12,7 +12,8 @@
     --shadow-Color1: rgba(0, 0, 0, 0.2);
   }
   body {
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     padding: 50px 0px;   
     background-image: linear-gradient(var(--black) 50%, var(--2nd-Color) 50%);
     background-repeat: no-repeat;
@@ -175,7 +176,8 @@
       font-size: 14px;
     }
     body{
-      height: 100%; 
+      height: 100%;
+      min-height: 100vh; 
     }
     .info {
       grid-template-columns: 1fr;
